[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Pantalla_inicio/Scripts/Pantalla_inicio.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Pantalla_inicio/Scenes/Animation.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Pantalla_inicio/Textures/titulo.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Pantalla_inicio/Textures/ciudad.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Pantalla_inicio/Textures/luna.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Pantalla_inicio/Resources/button1.tres" type="StyleBox" id=6]
[ext_resource path="res://Scenes/Pantalla_inicio/Resources/button0.tres" type="StyleBox" id=7]
[ext_resource path="res://Scenes/Pantalla_inicio/Resources/button_font.tres" type="DynamicFont" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Titulo"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("Titulo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 1460 ), Vector2( 360, 1381 ), Vector2( 360, 1302 ), Vector2( 360, 1222 ), Vector2( 360, 1143 ), Vector2( 360, 1064 ), Vector2( 360, 984 ), Vector2( 360, 905 ), Vector2( 360, 826 ), Vector2( 360, 747 ), Vector2( 360, 667 ), Vector2( 360, 588 ), Vector2( 360, 509 ), Vector2( 360, 429 ), Vector2( 360, 349 ), Vector2( 360, 270 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cielo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.0313726, 0.0313726, 0.0313726, 1 ), Color( 0.0862745, 0.0862745, 0.0862745, 1 ), Color( 0.121569, 0.121569, 0.121569, 1 ), Color( 0.164706, 0.164706, 0.164706, 1 ), Color( 0.215686, 0.215686, 0.215686, 1 ), Color( 0.25098, 0.25098, 0.25098, 1 ), Color( 0.282353, 0.282353, 0.282353, 1 ), Color( 0.313726, 0.313726, 0.313726, 1 ), Color( 0.352941, 0.352941, 0.352941, 1 ), Color( 0.419608, 0.419608, 0.419608, 1 ), Color( 0.501961, 0.501961, 0.501961, 1 ), Color( 0.588235, 0.588235, 0.588235, 1 ), Color( 0.654902, 0.654902, 0.654902, 1 ), Color( 0.780392, 0.780392, 0.780392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Pantalla_inicio" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Titulo = SubResource( 1 )

[node name="Cielo" parent="." instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 360, 720 )
scale = Vector2( 2.8125, 2.8125 )
frame = 3

[node name="Titulo" type="Sprite" parent="."]
position = Vector2( 360, 270 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ciudad" type="Sprite" parent="."]
position = Vector2( 360, 720 )
scale = Vector2( 2.813, 2.813 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Luna" type="Sprite" parent="."]
position = Vector2( 40, 30 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Continuar" type="Button" parent="."]
visible = false
margin_left = 250.0
margin_top = 440.0
margin_right = 670.0
margin_bottom = 570.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
disabled = true
text = "Continuar"

[node name="NuevaPartida" type="Button" parent="."]
visible = false
margin_left = 250.0
margin_top = 670.0
margin_right = 670.0
margin_bottom = 800.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
disabled = true
text = "Nueva Partida"
[connection signal="pressed" from="Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="NuevaPartida" to="." method="_on_NuevaPartida_pressed"]
